--- a/style.css
+++ b/style.css
@@ -114,13 +114,7 @@ h4 {
 /* Coming soooooooooooooooooon */
 
 .projects {
-  background-color: #141114;
-  background-image: linear-gradient(335deg, black 23px, transparent 23px),
-    linear-gradient(155deg, black 23px, transparent 23px),
-    linear-gradient(335deg, black 23px, transparent 23px),
-    linear-gradient(155deg, black 23px, transparent 23px);
-  background-size: 58px 58px;
-  background-position: 0px 2px, 4px 35px, 29px 31px, 34px 6px;
+  height: 100vh;
 }
 
 .sign {
@@ -320,7 +314,7 @@ h4 {
 @media only screen and (max-width: 600px) {
   .sign {
     font-size: 2em;
-    left: 10rem;
-    top: 10rem;
+    left: 50%;
+    top: 50%;
   }
 }
