--- a/style.css
+++ b/style.css
@@ -18,15 +18,18 @@ h4 {
   color: #ebebeb;
 }
 
-/* .behind {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
 }
-.behind img {
-  height: 100%;
-  width: 100%; 
-} */
+@media only screen and (max-width: 600px) {
+  #myVideo {
+    display: none;
+  }
+}
 .settings {
   position: absolute;
   top: 4rem;
